# G4tracker

./: README.md
config/: config.g4
src/: ActionInitialization.cxx  ActionInitialization.h  CMakeLists.txt  DetectorConstruction.cxx  DetectorConstruction.h  DetectorHit.cxx  DetectorHit.h  EventAction.cxx  EventAction.h  G4tracker.cxx  G4trackerLibrary_LinkDef.h  PrimaryGeneratorAction.cxx  PrimaryGeneratorAction.h  RunAction.cxx  RunAction.h  SensitiveDetector.cxx  SensitiveDetector.h
